@@ -2,6 +2,8 @@ $Id:
 
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
+- added additional RA options for lan and opt interfaces , required for DHCPv6
+
 - added all-servers option to dnsmasq and removed overlap check as having multiple
   nameservers per domain is a valid configuration
   
